
##----------------------------------------------------------------
##
##    プロジェクトの基本設定。
##

set(libraries_target_prefix)

##----------------------------------------------------------------
##
##    サブディレクトリの追加。
##

Add_SubDirectory (Tests)
Add_SubDirectory (.Config)

Add_SubDirectory (Common)
Add_SubDirectory (MD5)
